# Expression-Tree-Visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appConfig.json
application/: CMakeLists.txt  entry_point.cpp
application/shaders/: circle_shader.glsl  line_shader.glsl  test_shader.glsl  texture_shader.glsl
application/src/: application.cpp  application.h  application_configuration_loader.cpp  application_configuration_loader.h  window_class.cpp  window_class.h
application/src/constants/: Configurations.h
application/src/graphics/: batch_renderer.cpp  batch_renderer.h  font_resource_texture.cpp  font_resource_texture.h  shader_class.cpp  shader_class.h
application/src/helpers/: treeSymmetryEnum.h
application/src/layers/: graphics_layer.cpp  graphics_layer.h  layer.h  ui_layer.cpp  ui_layer.h
application/src/structs/: Position2D.h
core/include/: ExpressionTree.h  ExpressionTreeBuilder.h  ExpressionValidator.h
core/include/structs/: TreeNode.h
core/src/: CMakeLists.txt  ExpressionTree.cpp  ExpressionTree.h  ExpressionTreeBuilder.cpp  ExpressionValidator.cpp  main.cpp
core/src/States/: StateManager.h  StateRecordable.h
core/src/helpers/: ExpressionConverter.h
scripts/: run_build.bat
src/: ExpressionTree.cpp  ExpressionTree.h  ExpressionTreeBuilder.h  TreeNode.h  main.cpp
